--- a/css/styles.css
+++ b/css/styles.css
@@ -447,8 +447,8 @@ NAVIGATION
 .programacion {
   height: 120vh;
   gap: 1em;
-
   background-image: url("../images/edward-unsplash-blur.jpg");
+  background-repeat: no-repeat;
   background-position: center center;
 }
 .responsive{
